--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,77 @@
+/* Basic Body Reset */
 body {
     width: 100vw;
     height: 100vh;
-    margin: 0; /* Removes default body margin */
-    overflow: hidden; /* Prevents scrolling */
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f2e1d8;
+
 }
 
+/* Header Styling */
 #headerPlace {
     background-color: #bf9f78;
-    width: 100%; /* Matches the full width of the body */
-    height: 30px;
+    width: 100%;
     text-align: center;
-    padding:30px;
+    padding: 20px;
+    color: #fff;
+    font-size: 1.2em;
 }
 
-#hometitle{
-    size:100px;
-    text-align: center;
-}
-#aboutUs{
-    background-color: #bf9f78;
-    padding:10;
-    color: red;
+/* First Section Styling */
+#firstSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 60vh;
+    color: #bf5349;
+    
 }
 
-#firstSection{
-    background-color: red;
+#firstSection h1{
+    font-size: 100px;
 }
+
+#hometitle {
+    font-size: 2.5em;
+    margin: 0;
+}
+
+#logoContainer {
+    display: flex;
+    justify-content: center;
+    padding: 2%;
+    margin-top: 10px;
+}
+
+#logoContainer img {
+    max-width: 500px;
+
+}
+
+/* About Us Section Styling */
+#aboutUs {
+    background-color: #f2e1d8;
+    padding: 30px;
+    color: #333;
+    text-align: left;
+}
+
+#aboutUs h2 {
+    color: #bf5349;
+    margin-top: 0;
+    margin-left: 50px;
+
+}
+
+#aboutUs p {
+    font-size: 1.1em;
+    line-height: 1.5;
+    margin: 0 auto;
+    width: 80%;
+    margin-left: 150px;
+
+}
+
+
