--- a/Login/login_styles.css
+++ b/Login/login_styles.css
@@ -189,18 +189,15 @@ footer p {
 .grid-child-element { 
     margin: 10px; 
     border: 1px solid #8C031C; 
+    border-radius: 16px;
+
 }
+
 
 
 
 /* customizable text input styling  https://codepen.io/lucasyem/pen/ZEEYKdj/ */
 
-.form__group {
-  position: relative;
-  padding: 15px 0 0;
-  margin-top: 10px;
-  width: 50%;
-}
 
 .form__field {
   font-family: inherit;
@@ -209,46 +206,27 @@ footer p {
   border-bottom: 2px solid gray;
   outline: 0;
   font-size: 1.3rem;
-  color: white;
+  color: #074030;
   padding: 7px 0;
   background: transparent;
   transition: border-color 0.2s;
-
-  &::placeholder {
-    color: transparent;
-  }
-
-  &:placeholder-shown ~ .form__label {
-    font-size: 1.3rem;
-    cursor: text;
-    top: 20px;
-  }
 }
+
 
 .form__label {
-  display: block;
-  transition: 0.2s;
-  font-size: 1rem;
-  color: gray;
+  color:  #8C031C;
 }
-
-.form__field:focus {
-  ~ .form__label {
-    position: absolute;
-    top: 0;
-    display: block;
-    transition: 0.2s;
-    font-size: 1rem;
-    color:  #8C031C;
-    font-weight:700;    
+/* customizable button styling  https://www.w3schools.com/howto/howto_css_round_buttons.asp */
+.button {
+    background-color: #232a16; /* Green */
+    border: none;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 16px;
   }
-  padding-bottom: 6px;  
-  font-weight: 700;
-  border-width: 3px;
-  border-image: linear-gradient(to top, #8C031C, #8c4c3a);
-  border-image-slice: 1;
-}
-/* reset input */
-.form__field{
-  &:required,&:invalid { box-shadow:none; }
-}
