Login looking good
kept the login looking good

--- a/Login/login_styles.css
+++ b/Login/login_styles.css
@@ -9,17 +9,6 @@ body {
     color: #333;
 }
 
-/* Header Styling */
-#headerPlace {
-    background-color: #bf9f78;
-    width: 100%;
-    text-align: center;
-    padding: 20px;
-    color: #fff;
-    font-size: 1.2em;
-    font-family: 'Inconsolata', monospace;
-}
-
 /* First Section Styling */
 #firstSection {
     display: flex;
@@ -74,99 +63,28 @@ body {
     max-width: 300px;
 }
 
-/* About Us Section Styling */
-#aboutUs {
-    background-color: #f2e1d8;
-    padding: 40px 10%;
-    color: #333;
-    text-align: center;
+
+
+/* Navbar styling */
+.navbar {
+    background-color: #bf9f78;
+    padding-top: 5px;  
+    padding-bottom: 5px; 
 }
 
-#aboutUs h2 {
-    color:#8C031C;
-    font-size: 2.5em;
-    margin-bottom: 20px;
+.navbar img {
+    width: 70px;
 }
 
-#aboutUs p {
-    font-size: 1.1em;
-    line-height: 1.6;
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: justify;
-
-    
-}
-
-/* Gallery Section Styling */
-.gallery {
-    background-color: #fff7f0;
-    padding: 40px 10%;
-    text-align: center;
-}
-
-.gallery h2 {
-    color: #8C031C;
-    font-size: 2.5em;
-    margin-bottom: 20px;
-}
-
-.gallery-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
-}
-
-.gallery-item img {
-    width: 100%;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-/* Testimonials Section Styling */
-.testimonials {
+/* Login Section Styling */
+.login {
     background-color: #f2e1d8;
     padding: 40px 10%;
     text-align: center;
 }
 
 
-.testimonial {
-    font-style: italic;
-    background:#8C031C;
-    padding: 20px;    
-    border: 1px solid #074030; 
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 15px auto;
-    max-width: 600px;
 
-}
-
-.testimonial p {
-    margin: 0;
-    color: #8c4c3a;
-}
-
-
-
-/* Contact Us Section Styling */
-.contact {
-    background-color: #fff7f0;
-    padding: 40px 10%;
-    text-align: center;
-}
-
-.contact h2 {
-    color:#8C031C;
-    font-size: 2.5em;
-    margin-bottom: 20px;
-}
-
-.contact p {
-    font-size: 1.1em;
-    line-height: 1.5;
-}
 
 /* Footer Styling */
 footer {
@@ -185,6 +103,10 @@ footer p {
     display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-gap: 20px; 
+    background: #bf9f78;
+    border-radius: 16px;
+
+
 } 
 .grid-child-element { 
     margin: 10px; 
