--- a/CatalogPage/catstyle.css
+++ b/CatalogPage/catstyle.css
@@ -8,29 +8,9 @@
   body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #333;
+    background-color: #ffffff;
   }
   
-  h1 {
-    background-color: #333;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-    font-family: 'Bigshot One', cursive;
-    margin-bottom: -100px;
-
-
-  }
-  
-  header h1 {
-    font-size: 2.5rem;
-  }
-  
-  header p {
-    font-size: 1.2rem;
-    font-family: 'Space Grotesk', sans-serif;
-
-  }
   
   .catalog {
     display: flex;
@@ -42,15 +22,14 @@
   }
   
   .product-card {
-    background-color: #f4f4f4;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    width: 22%;
-    margin: 1rem;
+   
+    width: 30%;
+    margin: 0.5rem;
     padding: 1rem;
     text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   }
+ 
   
   .product-card img {
     width: 100%;
@@ -58,22 +37,29 @@
     border-radius: 5px;
   }
   
-  .product-card h2 {
-    margin: 1rem 0;
-    font-size: 1.5rem;
-  }
-  
-  .product-card p {
-    color: #555;
-    font-size: 1rem;
-  }
   
   .product-card button {
-    display: block;
-    margin-top: 1rem;
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #a62e2e;
+    margin-left:83%;
+    margin-top: -50;
+    border-radius: 5%;
+    padding: 3px;
+    background-color: rgb(218, 218, 218);
+    border-style: none;
+    width: 50px;
+    
+  }
+  .product-card button:hover {
+    margin-left:83%;
+    border-radius: 5%;
+    padding: 3px;
+    background-color: rgb(137, 137, 137);
+    border-style: none;
+    
+  }
+  .product-card button img {
+   width:  20px;
+   margin-top: 3px;;
+    
   }
   
   .sidebar {
