--- a/CatalogPage/catstyle.css
+++ b/CatalogPage/catstyle.css
@@ -11,6 +11,7 @@
     background-color: #ffffff;
   }
   
+ 
   
   .catalog {
     display: flex;
@@ -67,7 +68,7 @@
     top: 0;
     width: 200px;
     height: 100vh;
-    background-color: beige;
+    background-color: rgb(27, 29, 27);
     padding-top: 20px;
     padding-left: 10px;
   }
@@ -77,18 +78,14 @@
   }
   
   .sidebar ul li {
-    margin: 20px 0;
+    margin: 20px;
+    margin-left: 10px;
   }
+
   
-  .sidebar ul li a {
-    color: rgb(14, 14, 14);
-    text-decoration: none;
-    font-size: 1.2rem;
-  }
+
   
-  .sidebar ul li a:hover {
-    color: #ddd;
-  }
+  
 
   /* customizable snowflake styling  https://pajasevi.github.io/CSSnowflakes/*/
 .snowflake {
