--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Basic Body Reset */
 @import url('https://fonts.googleapis.com/css2?family=Bigshot+One&family=Inconsolata:wght@200..900&family=Space+Grotesk:wght@300..700&display=swap');
 
 body {
