added functionality to cart page

--- a/footer.css
+++ b/footer.css
@@ -1,7 +1,7 @@
 /* Footer Styling */
+
 footer {
-    background-color: #bf9f78;
-    color: #fff;
+    color:#b1988f;
     text-align: center;
     padding: 20px;
 }
