--- a/Login/login_styles.css
+++ b/Login/login_styles.css
@@ -78,7 +78,7 @@ body {
 
 /* Footer Styling */
 footer {
-    background-color: #bf9f78;
+    background-color: #b1988f;
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -93,7 +93,7 @@ footer p {
     display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-gap: 20px; 
-    background: #bf9f78;
+    background: #b1988f;
     border-radius: 16px;
 
 
